Migration du Slugify de Media vers Core

--- a/Resources/config/services.yaml
+++ b/Resources/config/services.yaml
@@ -16,3 +16,8 @@ services:
         arguments: ["@service_container"]
         tags:
         - { name: twig.extension }
+    plejeune.media.slugify:
+      public: true
+      class: PLejeune\CoreBundle\Service\Slugify
+      tags:
+          - { name: twig.extension }
