--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "plejeune/core-bundle",
+  "name": "darkanakin41/core-bundle",
   "type": "symfony-bundle",
   "description": "Pierre LEJEUNE CoreBundle",
   "keywords": [
