--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
   "authors": [
     {
       "name": "Pierre LEJEUNE",
-      "email": "lejeune.pierre.41@gmail.com"
+      "email": "darkanakin41@gmail.com"
     }
   ],
   "require": {
