--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
   },
   "autoload": {
     "psr-4": {
-      "PLejeune\\CoreBundle\\": ""
+      "Darkanakin41\\CoreBundle\\": ""
     },
     "exclude-from-classmap": [
       "/Tests/"
