--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
   ],
   "require": {
     "php": "^7.0",
-    "knplabs/knp-menu-bundle": "^2.0",
-    "knplabs/knp-paginator-bundle": "dev-master",
+    "knplabs/knp-menu-bundle": "*",
+    "knplabs/knp-paginator-bundle": "*",
     "symfony/form": "*",
     "symfony/framework-bundle": "*"
   },
