Migrating to github and separate src and test files Preparation for packagist publication

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "type": "symfony-bundle",
   "description": "Pierre LEJEUNE CoreBundle",
   "keywords": [
-    "Core Bundle",
+    "core",
     "symfony",
     "bundle"
   ],
