--- a/composer.json
+++ b/composer.json
@@ -38,5 +38,8 @@
     "psr-4": {
       "Darkanakin41\\CoreBundle\\Tests\\": "tests/"
     }
+  },
+  "require-dev": {
+    "friendsofphp/php-cs-fixer": "^2.16"
   }
 }
