--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -14,7 +14,10 @@ jobs:
       #        run: composer validate
 
       - name: Install dependencies
-        run: composer install --prefer-dist --no-progress --install-suggests
+        run: composer install --prefer-dist --no-progress --no-suggest
+
+      - name: Install suggested dependencies
+        run: composer install knplabs/knp-menu-bundle knplabs/knp-paginator-bundle symfony/form:^4.4
 
       # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
       # Docs: https://getcomposer.org/doc/articles/scripts.md
