--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -17,7 +17,7 @@ jobs:
         run: composer install --prefer-dist --no-progress --no-suggest
 
       - name: Install suggested dependencies
-        run: composer install knplabs/knp-menu-bundle knplabs/knp-paginator-bundle symfony/form:^4.4
+        run: composer require knplabs/knp-menu-bundle knplabs/knp-paginator-bundle symfony/form:^4.4
 
       # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
       # Docs: https://getcomposer.org/doc/articles/scripts.md
